# known-lists

./: .gitignore  CHANGELOG.md  LICENSE  README.md  known-lists.cabal
src/Data/: Known.hs  Membership.hs  TIndexed.hs
src/Data/Known/: Knowable.hs  Membership.hs  TypeIndexed.hs
test/: Example.hs  Test.hs
