cabal-version:      3.0
name:               known-lists
version:            0.1.0.0
synopsis:
    Easy type-level lists with term-level membership proofs.
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         shapeofmatter@pm.me
description:
    A type-level lists library for easy proof-of-membership programming.
    Provides data structures for talking about members of a list,
    as well as subsets,
    maps,
    and traversals.
category:           Data
build-type:         Simple
extra-doc-files:    README.md
tested-with:        

source-repository head
  type:     git
  location: https://github.com/ShapeOfMatter/known-lists

common basic-config
    default-language: GHC2024
    build-depends:
        , base                 ^>=4.20.0.0
    ghc-options:
      -Wall
      -Wno-incomplete-uni-patterns
      -fprint-potential-instances
      -haddock
      -Winvalid-haddock
    default-extensions: BlockArguments
                       ,DataKinds
                       ,ExplicitNamespaces
                       ,FunctionalDependencies
                       ,GADTs
                       ,ImpredicativeTypes
                       ,LambdaCase
                       ,LiberalTypeSynonyms
                       ,OverloadedLists
                       ,TypeFamilies
		       ,UndecidableSuperClasses

library
    import:           basic-config
    exposed-modules:  Data.Known
                     ,Data.Membership
    hs-source-dirs:   src

test-suite known-lists-test
    import:           basic-config
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Test.hs
    build-depends:
        known-lists
